Accessibility improvements: colour contrast to meet WCAG AAA, fixed headings structure and svg icons in the footer

--- a/cotr/static/scss/_settings.scss
+++ b/cotr/static/scss/_settings.scss
@@ -486,8 +486,8 @@ $menu-margin: 0;
 $menu-nested-margin: $global-menu-nested-margin;
 $menu-items-padding: $global-menu-padding;
 $menu-simple-margin: 1rem;
-$menu-item-color-active: $white;
-$menu-item-background-active: lighten($primary-color, 30%);
+$menu-item-color-active: $rich-black;
+$menu-item-background-active: lighten($primary-color, 35%);
 ;
 $menu-icon-spacing: 0.25rem;
 $menu-item-background-hover: $light-gray;
