--- a/cotr/static/scss/main.scss
+++ b/cotr/static/scss/main.scss
@@ -360,12 +360,14 @@ footer {
       border-bottom: 1px solid lighten($secondary-color, 15%);
     }
   }
-}
 
-footer {
+  h3 {
+    font-size: rem-calc(25);
+  }
+
   svg {
     fill: $light-gray;
-    max-width: 24px;
+    width: 24px;
   }
 }
 
@@ -758,6 +760,7 @@ main {
     overflow-wrap: break-word;
   }
 
+  h3,
   h4,
   h5 {
     padding: 0;
@@ -769,10 +772,10 @@ main {
   }
 
   .media-object {
-    h4 {
+    h3, h4 {
       font-size: 1.25rem;
       line-height: 1.25;
-      patting-top: .25rem;
+      padding-top: 0;
 
       small {
         font-size: 1rem;
@@ -929,10 +932,10 @@ main {
 
   .social {
     .media-object {
-      h4 {
+      h3, h4 {
         font-size: 1.25rem;
         line-height: 1.25;
-        patting-top: .25rem;
+        padding-top: 0;
 
         small {
           font-size: 1rem;
